[gd_scene load_steps=4 format=3 uid="uid://hxupnprp2vso"]

[ext_resource type="Texture2D" uid="uid://nvf0ri34qknr" path="res://assets/art/shop/drinks/Moscow Mule.png" id="1_bifb4"]
[ext_resource type="Script" path="res://scripts/drink.gd" id="1_kebyw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v3bnl"]
radius = 109.385

[node name="Drink" type="Area2D"]
script = ExtResource("1_kebyw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_bifb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.35, 0.35)
shape = SubResource("CircleShape2D_v3bnl")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
